[package]
name = "rosu-pp-js"
version = "1.0.0"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-pp-js"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "osu!"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# default = ["wee_alloc"]

[dependencies]
js-sys = "0.3.69"
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "next" }
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.84"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
# opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true
