[package]
name = "rosu-pp-js"
version = "3.1.0"
edition = "2024"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-pp-js"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.69"
rosu-mods = { version = "0.3.1", default-features = false, features = ["serde"] }
rosu-pp = "3.1.0"
serde = { version = "1.0.197", features = ["derive"] }
wasm-bindgen = "0.2.95"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# https://github.com/rustwasm/wasm-pack/issues/1501#issuecomment-2898697188
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
